2014-08-01  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	Backport from mainline
	2014-06-13  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	PR tree-optimization/61375
	* gcc.c-torture/execute/pr61375-1.c: New test.

2014-08-01  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/61964
	* gcc.dg/torture/pr61964.c: New testcase.
	* gcc.dg/pr51879-18.c: XFAIL.

2014-07-28  Richard Biener  <rguenther@suse.de>

	PR rtl-optimization/61801
	* gcc.target/i386/pr61801.c: Fix testcase.

2014-07-28  Richard Biener  <rguenther@suse.de>

	PR rtl-optimization/61801
	* gcc.target/i386/pr61801.c: New testcase.

2014-07-24  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	Backport from mainline:
	2014-07-24  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* gcc.target/powerpc/ppc64-abi-warn-3.c: New test.

	* gcc.c-torture/execute/20050316-1.x: Add -Wno-psabi.
	* gcc.c-torture/execute/20050604-1.x: Add -Wno-psabi.
	* gcc.c-torture/execute/20050316-3.x: New file.  Add -Wno-psabi.
	* gcc.c-torture/execute/pr23135.x: Likewise.

2014-07-24  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	Backport from mainline:
	2014-07-24  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* gcc.target/powerpc/ppc64-abi-warn-2.c: New test.

2014-07-24  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	Backport from mainline:
	2014-07-24  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* gcc.target/powerpc/ppc64-abi-warn-1.c: New test.

2014-07-24  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	Backport from mainline:
	2014-07-24  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* g++.dg/compat/struct-layout-1.exp: Load g++-dg.exp.

2014-07-19  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.dg/stack-usage-2.c: Adjust.

2014-07-19  Paul Thomas  <pault@gcc.gnu.org>

	Backport from trunk.
	PR fortran/61780
	* gfortran.dg/dependency_44.f90 : New test

2014-07-10  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/opt39.adb: New test.

2014-07-08  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/61459